[project]
name = "agent-memory-runtime"
version = "0.2.0"
description = "Production-ready memory runtime for long-running AI agents"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
